// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FictionBody /> - snapshots should match snapshot 1`] = `
<div>
  <div>
    <div
      className="harvesting-container"
    />
  </div>
  <div
    className="post-body post-body--is-harvestable"
  >
    <h3
      className="post-body-title dark-title-3"
    >
      Fugit veritatis nemo
    </h3>
    <div
      className="post-body-content body"
    >
      <div
        onMouseUp={[Function]}
      >
        <div
          id="message-body-local:Content/1"
        >
          Vero et ut et quia quo. Molestiae ut cupiditate odio numquam veniam esse cumque modi.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FictionBody /> - snapshots should match snapshot no title nor content 1`] = `
<div>
  <div>
    <div
      className="harvesting-container"
    />
  </div>
  <div
    className="post-body post-body--is-harvestable"
  >
    <h3
      className="post-body-title dark-title-3"
    >
      no title specified
    </h3>
    <div
      className="post-body-content body"
    >
      <div
        onMouseUp={[Function]}
      >
        <div
          id="message-body-local:Content/1"
        >
          no content specified
        </div>
      </div>
    </div>
  </div>
</div>
`;
